--- a/src/static/templates/ecommerce/includes/nav.html
+++ b/src/static/templates/ecommerce/includes/nav.html
@@ -54,8 +54,7 @@
                 <div class="col col-md-auto socials">
                         <p>
                                 <a href='https://www.facebook.com/CATERRA.mx/' target='_blank'><i class="fab fa-facebook-f"></i></a>&nbsp;&nbsp;
-                                <a href=""><i class="fab fa-twitter"></i></a>&nbsp;&nbsp;
-                                <a href=""><i class="fab fa-instagram"></i></a>
+                                <a href="https://www.instagram.com/CATERRA.mx/"><i class="fab fa-instagram"></i></a>
                         </p>
                 </div>
                 
