--- a/src/static/templates/ecommerce/layouts/ecommerce.layout.html
+++ b/src/static/templates/ecommerce/layouts/ecommerce.layout.html
@@ -82,10 +82,7 @@
                             <a href='https://www.facebook.com/CATERRA.mx/' target='_blank'><i class="fab fa-facebook-f"></i></a>
                         </div>
                         <div class="circle-social text-center">
-                            <a href=""><i class="fab fa-twitter"></i></a>
-                        </div>
-                        <div class="circle-social text-center">
-                            <a href=""><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.instagram.com/CATERRA.mx/"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                 </div>
